# cmucal-v2

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
backend/: README.md  mock_data.txt  models.py  requirements.txt  test_mongodb.py
backend/app/: __init__.py  cli.py
backend/app/api/: admin.py  auth.py  base.py  events.py  google_oauth.py  organizations.py  schedule.py  users.py  webhook.py
backend/app/config/: settings.py
backend/app/models/: academic.py  admin.py  calendar_source.py  career.py  category.py  category_ical.py  club.py  enums.py  event.py  models.py  (+12 more)
rust/: .gitignore  Cargo.toml  README.md
rust/datafetcher/: Cargo.toml
rust/datafetcher/scripts/: course_details.hurl  file_urls.hurl  final_url.hurl
rust/datafetcher/src/: lib.rs  main.rs  util.rs
rust/datafetcher/src/courses/: first_pass.rs  line.rs  mod.rs  second_pass.rs
rust/models/: Cargo.toml
rust/models/src/: course_data.rs  days.rs  lib.rs  requisite.rs  reservation.rs  reservation_type.rs  syllabus_data.rs  units.rs
scraper/: cmu_events_20250809_171006.xlsx  config.ini  handshake_events_20250809_175837.xlsx  models.py  set_handshake_token.py
scraper/exporters/: __init__.py  handshake_export_to_excel.py  peer_tutoring_export_to_excel.py  si_export_to_excel.py  tartanconnect_export_to_excel.py
src/: middleware.ts  mock_data.json
src/app/: layout.tsx  page.tsx
src/context/: EventStateContext.tsx  GCalEventsContext.tsx
src/styles/: calendar.css  globals.css
src/utils/: authService.ts  dateService.ts  redirect.ts
(+68 files in other folders)
