[package]
name = "datafetcher"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
hurl = "6.1.1"
lazy_static = "1.5.0"
models = { path = "../models" }
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
scraper = "0.23.1"

futures = "0.3.31"
sea-orm = { version = "1.1.13", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
dotenvy = "0.15.7"

[[bin]]
name = "datafetcher"
path = "src/main.rs"

